...
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_header_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tv_title_movies"
                android:scaleType="centerCrop"
                android:src="@color/color_on_primary"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/appbar_padding">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.304"
                tools:progress="100" />

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_extrabold"
                android:text="@string/tv_try_again"
                android:textAlignment="center"
                android:textColor="@color/color_on_primary"
...
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.303" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/TitleContent"
                android:text="@string/tv_date"
                android:textColor="@color/color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_genre"
                style="@style/TitleContent"
                android:text="@string/tv_genre"
                android:textColor="@color/color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <ImageView
                android:id="@+id/add_favorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/title_favorites"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/ic_score"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/ic_score"
...
                android:text="@string/title_score"
                app:layout_constraintBottom_toBottomOf="@+id/ic_score"
                app:layout_constraintStart_toEndOf="@+id/ic_score"
                app:layout_constraintTop_toTopOf="@+id/ic_score" />

            <ProgressBar
                android:id="@+id/ic_duration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:indeterminateOnly="false"
                android:progress="100"
                android:progressDrawable="@drawable/ic_score"
                app:layout_constraintStart_toEndOf="@+id/title_user_score"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_duration"
                style="@style/TitleScore"
                android:text="@string/tv_duration"
                app:layout_constraintBottom_toBottomOf="@+id/ic_duration"
                app:layout_constraintEnd_toEndOf="@+id/ic_duration"
                app:layout_constraintStart_toStartOf="@+id/ic_duration"
                app:layout_constraintTop_toTopOf="@+id/ic_duration" />
...
                android:layout_marginTop="32dp"
                android:text="@string/title_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_score" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/Content"
                android:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_overview" />

...
